Added trainer names

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 	<head>
 		<title>Git Foundations from GitHub</title>
 	</head>
-	<body></body>
+	<body>
+
+	With Trainers Jordan McCullough &amp; Ben Straub
+	</body>
 </html>
