Added big heading for class title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Git Foundations from GitHub</title>
 	</head>
 	<body>
-
+	<h1>Git Foundations</h1>
 	With Trainers Jordan McCullough &amp; Ben Straub
 	</body>
 </html>
