Edited trainer line, added some description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 	<h1>Git Foundations</h1>
-	With Trainers Jordan McCullough &amp; Ben Straub
+	<h2>Learning Git and GitHub</h2>
+	<p> With Trainers Jordan McCullough and Ben Straub</p>
 	</body>
 </html>
