Renamed home file, edited sub title trainers

--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 	<h1>Git Foundations</h1>
-	<p> With Trainers Jordan McCullough and Ben Straub</p>
+	<p>Trainers Jordan McCullough and Ben Straub</p>
 	</body>
 </html>
