Added class series desc.

--- a/classes.html
+++ b/classes.html
@@ -1,6 +1,6 @@
 <h1>Our Classes</h1>
 
 <ul>
-	<li>Git Foundations</li>
-	<li>Git Advanced</li>
+	<li>Git Foundations - 2 part series</li>
+	<li>Git Advanced - 1 part series</li>
 </ul>
