--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 		<title>Git Foundations from GitHub</title>
 	</head>
 	<body>
-	<h1>Git Foundations</h1>
+	<h1>Git Foundations date</h1>
 	<p>Trainers Jordan McCullough and Ben Straub</p>
 	</body>
 </html>
