--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 	<h1>Git Foundations date</h1>
-	<p>Trainers Jordan McCullough and Ben Straub</p>
+	<p>Trainers Jordan McCullough and Tim</p>
 	</body>
 </html>
